[gd_scene load_steps=22 format=3 uid="uid://d2qsywrldln5o"]

[ext_resource type="Script" uid="uid://cvdkora60dfn" path="res://scripts/node.gd" id="1_p2n4s"]
[ext_resource type="Script" uid="uid://5s0vtke0e1yn" path="res://scripts/general_information.gd" id="2_pj3ui"]
[ext_resource type="Script" uid="uid://dssv6kmdqd3eq" path="res://scripts/frame_handle_esteira.gd" id="3_47nsi"]
[ext_resource type="Script" uid="uid://dgnn4m4k3b3j6" path="res://scripts/musicas.gd" id="4_0f7rm"]
[ext_resource type="Script" uid="uid://cepq3mjbsol3" path="res://scripts/TileDataBase.gd" id="4_pj3ui"]
[ext_resource type="AudioStream" uid="uid://drhr6tm1ek8od" path="res://assets/Editor.ogg.ogg" id="5_1cwl4"]
[ext_resource type="AudioStream" uid="uid://cbgwu151flxot" path="res://assets/Launch.ogg.ogg" id="6_xmxbe"]
[ext_resource type="AudioStream" uid="uid://cl1g5fpk0clb5" path="res://assets/Menu.ogg.ogg" id="7_gdsao"]
[ext_resource type="Texture2D" uid="uid://xeggc1yfwhry" path="res://assets/bacakground or beauty shit/spritesheet.png" id="8_c7fnt"]
[ext_resource type="Texture2D" uid="uid://bk7isa7rya2l6" path="res://assets/useful shit/spritesheet.png" id="9_51p24"]
[ext_resource type="Script" uid="uid://bu80v3b0i44ei" path="res://scripts/player.gd" id="10_ux7ig"]
[ext_resource type="Texture2D" uid="uid://djealfjxhna4o" path="res://assets/useful shit/player.png" id="11_dw17u"]
[ext_resource type="Script" uid="uid://b0basbxt664u0" path="res://scripts/construir.gd" id="12_d7cqa"]

[sub_resource type="Animation" id="Animation_bss38"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Editor_ogg:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Launch_ogg:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-20.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu_ogg:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-20.0]
}

[sub_resource type="Animation" id="Animation_tda05"]
resource_name = "musica_start"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Editor_ogg:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Launch_ogg:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu_ogg:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.16667, 9.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-50.0, -15.0, -7.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qn3nj"]
_data = {
&"RESET": SubResource("Animation_bss38"),
&"musica_start": SubResource("Animation_tda05")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2u21"]
texture = ExtResource("8_c7fnt")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bss38"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_e2u21")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bss38"]
texture = ExtResource("9_51p24")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
3:0/size_in_atlas = Vector2i(3, 3)
3:0/0 = 0
6:0/size_in_atlas = Vector2i(3, 3)
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tda05"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_bss38")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bss38"]
size = Vector2(46, 47)

[node name="Node" type="Node"]
script = ExtResource("1_p2n4s")

[node name="General-Information" type="Node" parent="."]
script = ExtResource("2_pj3ui")

[node name="Frame-Handlers" type="Node2D" parent="."]

[node name="Frame-Das-Esteiras" type="Node2D" parent="Frame-Handlers"]
script = ExtResource("3_47nsi")

[node name="Node" type="Node" parent="."]
script = ExtResource("4_pj3ui")

[node name="Estruturas" type="Node" parent="."]

[node name="Ghosting" type="Node2D" parent="Estruturas"]
z_index = 5

[node name="musicas" type="Node" parent="."]
script = ExtResource("4_0f7rm")

[node name="Editor_ogg" type="AudioStreamPlayer2D" parent="musicas"]
position = Vector2(-408, 390)
stream = ExtResource("5_1cwl4")
volume_db = -20.0
max_distance = 4096.0

[node name="Launch_ogg" type="AudioStreamPlayer2D" parent="musicas"]
position = Vector2(-649, 381)
stream = ExtResource("6_xmxbe")
volume_db = -20.0

[node name="Menu_ogg" type="AudioStreamPlayer2D" parent="musicas"]
position = Vector2(-524, 475)
stream = ExtResource("7_gdsao")
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="musicas"]
libraries = {
&"": SubResource("AnimationLibrary_qn3nj")
}

[node name="Tiles" type="Node" parent="."]

[node name="Bottom TileMap" type="TileMapLayer" parent="Tiles"]
z_index = -1
tile_set = SubResource("TileSet_bss38")

[node name="Mid TileMap" type="TileMapLayer" parent="Tiles"]
z_index = 1
tile_map_data = PackedByteArray(0, 0, 247, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0, 248, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0, 249, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0, 250, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0)
tile_set = SubResource("TileSet_tda05")

[node name="Player TileMap" type="TileMapLayer" parent="Tiles"]
z_index = 2
tile_map_data = PackedByteArray(0, 0, 247, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0, 248, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0, 249, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0, 250, 255, 2, 0, 1, 0, 6, 0, 2, 0, 0, 0)
tile_set = SubResource("TileSet_tda05")

[node name="Top TileMap" type="TileMapLayer" parent="Tiles"]
z_index = 4

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("10_ux7ig")

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Player2" type="Sprite2D" parent="Player"]
rotation = 1.5708
texture = ExtResource("11_dw17u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_bss38")

[node name="ComponenteDeConstrução" type="Node2D" parent="Player"]
unique_name_in_owner = true
script = ExtResource("12_d7cqa")

[node name="Label" type="Label" parent="."]
offset_left = -30.0
offset_top = -61.0
offset_right = 10.0
offset_bottom = -38.0
